# call-insight

./: main.py  pyproject.toml
.streamlit/: config.toml
call_app/: __init__.py  app.py  qna_ui.py
call_app/components/: __init__.py  calls_table.py  charts.py  details_drawer.py  kpis.py  semantic_rerank.py  vectorstore_settings.py
configs/: app.yml  llm.yml  rules.yml  vectorstore.yml
core/: aggregations.py  audio_preprocess.py  caching.py  diarization.py  filters.py  ingestion.py  labeling_rules.py  schema.py  semantic_search.py  storage.py  stt_whisper.py  utils.py
llm/: interpreter.py  runner.py  summarizer.py  synonyms.py
scripts/: __init__.py  build_vector_index.py  rebuild_caches.py  validate_configs.py
tests/: test_aggregations.py  test_chroma_backend_hash.py  test_filters.py  test_interpreter.py  test_labeling_rules.py  test_semantic_rank_intersect.py  test_vectorstore.py
vectorstore/: __init__.py  backend.py  embedder.py  embedders_local.py  indexer.py
vectorstore/chroma/: __init__.py  backend.py  indexer.py
